# six_can

./: .gitignore  README.md  aider_can_chooser.md  aider_capture_can.md  aider_six_can.md  aider_six_can_runner.md  package.xml  setup.cfg  setup.py
config/: nav2_params.yaml  search_poses.yaml  search_poses.yaml.test_arena
launch/: bringup.launch.py  default_robot.launch.py  lasers.launch.py  move_servers.launch.py  move_servers_launch.py  navigation.launch.py  sensors.launch.py
maps/: SixCanArena.pgm  SixCanArena.yaml  TestArena.pgm  TestArena.yaml  lab_map.pgm  lab_map.yaml
resource/: search_poses.yaml
rviz/: six_can.rviz
six_can/: CaptureCan.py  basic_navigator_child.py  can_chooser.py  can_chooser_client.py  capture_can.py  capture_can_no_subs.py  jaws.py  move_node.py  nav2pose.py  navloop.py  odom_republisher.py  simple_capture.py  single_move_client.py  six_can_navigator.py  six_can_runner.py  yaml_parser_node.py
test/: can_chooser_test.py  test_nav_and_move.py
